--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,34 @@
-<h1 class="test">SundayApp2 is working</h1>
+<navigation-bar></navigation-bar>
+<div class="container d-flex justify-content-center">
+  <h1 class="test">SundayApp2 is working</h1>
+</div>
+<div class="container d-flex justify-content-center">
+  <button class="btn btn-success">Click click</button>
+  <button class="btn btn-warning">Click click</button>
+  <button class="btn btn-dark">Click click</button>
+</div>
+<hr />
+<div class="container d-flex justify-content-center">
+  <div class="jumbotron">
+    <h1 class="display-4">{{ title }}</h1>
+    <p class="lead">{{ description }}</p>
+    <hr class="my-4" />
+    <p>
+      It uses utility classes for typography and spacing to space content out
+      within the larger container.
+    </p>
+    <ol>
+      <li *ngFor="let city of cities">{{ city }}</li>
+    </ol>
+    <p class="lead">
+      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    </p>
+  </div>
+  <div class="jumbotron">
+    <product-list></product-list>
+  </div>
+</div>
 <p>{{ title }}</p>
 <p>{{ bestFoodEver }}</p>
 <exmpl1></exmpl1>
+<one-way-binding> </one-way-binding>
