Calculator implemented (not finished)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,3 +32,5 @@
 <p>{{ bestFoodEver }}</p>
 <exmpl1></exmpl1>
 <one-way-binding> </one-way-binding>
+<contact-form></contact-form>
+<app-calculator></app-calculator>
